Updated demo part 2 notebook with "spheres" scene update

--- a/demo/2-scene_construction/scene_construction.ipynb
+++ b/demo/2-scene_construction/scene_construction.ipynb
@@ -209,7 +209,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The scene we just rendered can also be loaded from a Python dictionary. It is very important, however, to note that building a scene dictionary usually requires to select a kernel variant."
+    "The scene we just rendered can also be loaded from a Python dictionary. It is very important, however, to note that building a scene dictionary requires to select a kernel variant."
    ]
   },
   {
@@ -318,6 +318,50 @@
    "outputs": [],
    "source": [
     "render(scene)\n",
+    "plot(scene)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Kernel scene dictionaries are a very flexible way of interacting with the model. They are very easy to modify. For instance, let's add a few objects to the scene (floating spheres), increase the image resolution and decrease the number of samples:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scene_dict[\"measure\"][\"sampler\"][\"sample_count\"] = 512\n",
+    "scene_dict[\"measure\"][\"film\"][\"height\"] = scene_dict[\"measure\"][\"film\"][\"width\"] = 256\n",
+    "scene_dict[\"integrator\"][\"type\"] = \"volpath\"\n",
+    "\n",
+    "n_spheres = 24\n",
+    "angles = np.linspace(0, 2. * np.pi, n_spheres, endpoint=False)\n",
+    "cycle = 6\n",
+    "\n",
+    "reflectances_fwd = np.linspace(0., 1., int(cycle/2)+1)\n",
+    "reflectances_bwd = reflectances_fwd[-2:-int(cycle/2)-1:-1]\n",
+    "reflectances = (list(reflectances_fwd) + list(reflectances_bwd)) * int(n_spheres/cycle)\n",
+    " \n",
+    "for i, (angle, reflectance) in enumerate(zip(angles, reflectances)):\n",
+    "    scene_dict[f\"floating_sphere_{i}\"] = {\n",
+    "        \"type\": \"sphere\", \n",
+    "        \"radius\": 7.5,\n",
+    "        \"center\": [75. * np.cos(angle), 75. * np.sin(angle), 50],\n",
+    "        \"bsdf\": {\n",
+    "            \"type\": \"diffuse\",\n",
+    "            \"reflectance\": {\n",
+    "                \"type\": \"uniform\",\n",
+    "                \"value\": reflectance * 0.75\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "scene = load_dict(scene_dict)\n",
+    "render(scene)\n",
+    "plt.figure(figsize=(8,6))\n",
     "plot(scene)"
    ]
   },
@@ -588,9 +632,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For comparison, the same scene created using the Level-1 interface looks like this:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "scene_dict_manual = {\n",
@@ -814,7 +869,7 @@
    "source": [
     "At this point, you can notice the noise in the output: the number of samples has been kept relatively low for this demo. There are lots of possible improvements to this solver and the scene elements we used, and they will be implemented gradually.\n",
     "\n",
-    "This is the end of this demonstration. Eradiate has an even higher level of automation in store, which is showcased in the third part of our demonstration!"
+    "This is the end of this demonstration. Eradiate has an even higher level of automation in store, which is showcased in the third part!"
    ]
   },
   {
@@ -827,9 +882,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.7 64-bit",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python37764bit13027b374c7846a8b22a568d0e77d399"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -841,7 +896,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7-final"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
