Updated demo part 2 notebook (aligned scenes throughout the notebook)

--- a/demo/2-scene_construction/scene_construction.ipynb
+++ b/demo/2-scene_construction/scene_construction.ipynb
@@ -85,7 +85,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scene = load_file(\"scene.xml\", res=64, spp=512)"
+    "scene = load_file(\"scene.xml\", res=128, spp=512)"
    ]
   },
   {
@@ -298,7 +298,7 @@
     "    # Volumetric path tracer (no multiple importance sampling)\n",
     "    \"integrator\": {\"type\": \"volpath\"}\n",
     "}\n",
-    "display(scene_dict)\n",
+    "#display(scene_dict)\n",
     "\n",
     "from eradiate.kernel.core.xml import load_dict\n",
     "scene = load_dict(scene_dict)"
@@ -336,7 +336,6 @@
    "source": [
     "scene_dict[\"measure\"][\"sampler\"][\"sample_count\"] = 512\n",
     "scene_dict[\"measure\"][\"film\"][\"height\"] = scene_dict[\"measure\"][\"film\"][\"width\"] = 256\n",
-    "scene_dict[\"integrator\"][\"type\"] = \"volpath\"\n",
     "\n",
     "n_spheres = 24\n",
     "angles = np.linspace(0, 2. * np.pi, n_spheres, endpoint=False)\n",
@@ -392,10 +391,9 @@
    "outputs": [],
    "source": [
     "import eradiate.kernel\n",
-    "from eradiate.scenes import SceneDict\n",
     "eradiate.kernel.set_variant(\"scalar_mono_double\")\n",
     "\n",
-    "\n",
+    "from eradiate.scenes import SceneDict\n",
     "scene_dict = SceneDict.empty()\n",
     "print(f\"scene_dict.variant = {scene_dict.variant}\")\n",
     "display(scene_dict)"
@@ -421,7 +419,7 @@
     "scene_horizontal_size = 200.  # km\n",
     "\n",
     "surface = Lambertian({\n",
-    "    \"reflectance\": 0.5, \n",
+    "    \"reflectance\": 0.5,\n",
     "    \"width\": scene_horizontal_size,\n",
     "})\n",
     "display(surface)"
@@ -641,11 +639,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "scene_dict_manual = {\n",
@@ -729,7 +723,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3. One-dimensional solver interface"
+    "# 3. One-dimensional runner (Level-2)"
    ]
   },
   {
@@ -757,7 +751,7 @@
    "source": [
     "We now instantiate the `OneDimSolver` class. It takes a scene geometry, optical properties and illumination, and positions sensors automatically so as to compute the radiance leaving the scene at the top of the atmosphere.\n",
     "\n",
-    "`OneDimSolver` is designed to host pseudo one-dimensional scene, _i.e._ solve problems with two translational invariances. However, Eradiate's Mitsuba kernel does not exactly handle this type of symmetries; instead, a normal three-dimensional scene is used. This means that special care must be taken when creating the scene. The scene we have been working on in the rest of this tutorial is designed with that in mind: its optical thickness in the horizontal directions is such that the point (0,0,0) is out of the radiative boundary layer and will therefore not be subject to boundary effects."
+    "`OneDimSolver` is designed to host pseudo one-dimensional scene, _i.e._ solve problems with two translational invariances, and estimate the radiance leaving the scene. However, Eradiate's Mitsuba kernel does not exactly handle this type of symmetries; instead, a normal three-dimensional scene is used. This means that special care must be taken when creating the scene. The scene we have been working on in the rest of this tutorial is designed with that in mind: its optical thickness in the horizontal directions is such that the point (0,0,0) is out of the radiative boundary layer and will therefore not be subject to boundary effects."
    ]
   },
   {
@@ -772,9 +766,8 @@
     "from eradiate.scenes.atmosphere import RayleighHomogeneous\n",
     "from eradiate.scenes.illumination import Directional\n",
     "\n",
-    "solver = OneDimSolver(SceneDict.empty().add([\n",
+    "runner = OneDimSolver(SceneDict.empty().add([\n",
     "    Lambertian({\n",
-    "        \"type\": \"lambertian\",\n",
     "        \"reflectance\": 0.5, \n",
     "        \"width\": 200\n",
     "    }),\n",
@@ -784,11 +777,11 @@
     "        \"width\": 200.\n",
     "    }),\n",
     "    Directional({\n",
-    "        \"zenith\": 0.,\n",
+    "        \"zenith\": 30.,\n",
     "        \"azimuth\": 0.,\n",
-    "        \"irradiance\": 1.0e+6\n",
+    "        \"irradiance\": 1.8e+6\n",
     "    }),\n",
-    "    {\"integrator\": {\"type\": \"volpathmis\"}}\n",
+    "    {\"integrator\": {\"type\": \"volpath\"}}\n",
     "]))"
    ]
   },
@@ -798,7 +791,7 @@
    "source": [
     "Note that this scene definition does _not_ include any sensor: the solver will take care of instantiating them and positioning them appropriately based on the angular configuration requested by the user.\n",
     "\n",
-    "We can first run the simulation for a single angular configuration:"
+    "We start the simulation with the `run` method. We can first run the simulation for a single angular configuration:"
    ]
   },
   {
@@ -809,7 +802,7 @@
    },
    "outputs": [],
    "source": [
-    "solver.run(\n",
+    "runner.run(\n",
     "    vza=0., \n",
     "    vaa=0.,\n",
     "    spp=32000\n",
@@ -822,7 +815,7 @@
    "source": [
     "Note that since we defined our scene in kilometres, the recorded radiance is in W/km^2/sr/nm.\n",
     "\n",
-    "We start the simulation with the `run` method. We specify the angular grid, as well as the number of samples."
+    "We can specify an angular grid:"
    ]
   },
   {
@@ -839,7 +832,7 @@
     "zenith_grid = np.arange(0., 90., 10.)\n",
     "azimuth_grid = np.arange(0., 360.1, 10.)\n",
     "\n",
-    "result = solver.run(\n",
+    "result = runner.run(\n",
     "    vza=zenith_grid, \n",
     "    vaa=azimuth_grid,\n",
     "    spp=4096\n",
