updated demo part 3 notebook

--- a/demo/3-rayleigh_solver_app/rayleigh_solver_app.ipynb
+++ b/demo/3-rayleigh_solver_app/rayleigh_solver_app.ipynb
@@ -67,7 +67,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -75,30 +77,31 @@
     "config = {\n",
     "    'mode': {\n",
     "        'type': 'mono',\n",
-    "        'wavelength': 760.\n",
+    "        'wavelength': 760.  # nm\n",
     "    },\n",
     "    'illumination': {\n",
     "        'type': 'directional',\n",
-    "        'zenith': 30.,\n",
-    "        'azimuth': 0.\n",
+    "        'zenith': 30.,  # deg\n",
+    "        'azimuth': 0.,  # deg\n",
+    "        'irradiance': 1.8e+6  # W/km^2/nm\n",
     "    },\n",
     "    'surface': {\n",
     "        'type': 'lambertian',\n",
-    "        'reflectance': 0.35\n",
+    "        'reflectance': 0.35  # dimensionless\n",
     "    },\n",
     "    'atmosphere': {\n",
     "        'type': 'rayleigh_homogeneous',\n",
-    "        'height': 100,\n",
-    "        'width': 10000,\n",
+    "        'height': 100,  # km\n",
+    "        'width': 10000,  # km\n",
     "        'sigma_s_params': {\n",
-    "            'refractive_index': 1.0003\n",
+    "            'refractive_index': 1.0003  # dimensionless\n",
     "        }\n",
     "    },\n",
     "    'measure': {\n",
     "        'type': 'hemispherical',\n",
-    "        'spp': 1000,\n",
-    "        'zenith_res': 10.,\n",
-    "        'azimuth_res': 10.\n",
+    "        'spp': 1000,  # dimensionless\n",
+    "        'zenith_res': 10.,  # deg\n",
+    "        'azimuth_res': 10.  # deg\n",
     "    }\n",
     "}\n",
     "app = RayleighSolverApp(config)\n",
