changed sigma into tau

--- a/demo/bonus_rpv_atmo_demo.ipynb
+++ b/demo/bonus_rpv_atmo_demo.ipynb
@@ -79,115 +79,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c56809f2c1f3445f826d46965ebe8903",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=333.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2b7d82f3e0364cc2be422a5ad7e72a15",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=333.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a8bd1c069ec34537986747106db8a21b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=333.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6d6ca710978c49ffad5e51abcc2ddde8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=333.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "beb39776abba4120a5d59424d255d185",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=333.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sigmas = [1e-3, 5e-3, 1e-2, 5e-2, 1e-1]\n",
     "\n",
@@ -253,11 +147,11 @@
     "pcm4 = axs[4].pcolormesh(theta, r, np.transpose(results[4]), cmap=\"BuPu_r\") \n",
     "plt.colorbar(pcm4, ax=axs[4])\n",
     "\n",
-    "axs[0].set_title(\"sigma = 1e-3\", y=1.1)\n",
-    "axs[1].set_title(\"sigma = 5e-3\", y=1.1)\n",
-    "axs[2].set_title(\"sigma = 1e-2\", y=1.1)\n",
-    "axs[3].set_title(\"sigma = 5e-2\", y=1.1)\n",
-    "axs[4].set_title(\"sigma = 1e-1\", y=1.1)\n",
+    "axs[0].set_title(r\"$\\tau = 0.04$\", y=1.1)\n",
+    "axs[1].set_title(r\"$\\tau = 0.2$\", y=1.1)\n",
+    "axs[2].set_title(r\"$\\tau = 0.4$\", y=1.1)\n",
+    "axs[3].set_title(r\"$\\tau = 2.0$\", y=1.1)\n",
+    "axs[4].set_title(r\"$\\tau = 4.0$\", y=1.1)\n",
     "plt.show()\n",
     "plt.close()\n"
    ]
