fixed illumination irradiance values

--- a/demo/2-scene_construction/scene_construction.ipynb
+++ b/demo/2-scene_construction/scene_construction.ipynb
@@ -263,7 +263,7 @@
     "    },\n",
     "\n",
     "    # Directional light source with zenith angle of 30° and \n",
-    "    # irradiance of 1.8 W/km^2/nm.\n",
+    "    # irradiance of 1.8e6 W/km^2/nm.\n",
     "    \"illumination\": {\n",
     "        \"type\": \"directional\",\n",
     "        \"direction\": [-0.5, 0, -0.8660254],\n",
@@ -682,13 +682,13 @@
     "    },\n",
     "\n",
     "    # Directional light source with zenith angle of 30° and \n",
-    "    # irradiance of 1 W/km^2/nm.\n",
+    "    # irradiance of 1.8e6 W/km^2/nm.\n",
     "    \"illumination\": {\n",
     "        \"type\": \"directional\",\n",
     "        \"direction\": [-0.5, 0, -0.8660254],\n",
     "        \"irradiance\": {\n",
     "            \"type\": \"uniform\",\n",
-    "            \"value\": 1e6\n",
+    "            \"value\": 1.8e6\n",
     "        }\n",
     "    },\n",
     "\n",
