fixed notebook and yaml config file after feedback from second rehearsal

--- a/demo/3-rayleigh_solver_app/rayleigh_solver_app.ipynb
+++ b/demo/3-rayleigh_solver_app/rayleigh_solver_app.ipynb
@@ -8,58 +8,19 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The application is created by instantiating the ``RayleighSolverApp`` class, defined in the ``rayleigh`` module of the ``onedim`` solvers package."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from eradiate.solvers.onedim.rayleigh import RayleighSolverApp\n",
-    "app = RayleighSolverApp()"
+    "from eradiate.solvers.onedim.rayleigh import RayleighSolverApp"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With ``RayleighSolverApp``, you don't have to set the kernel variant anymore. ``RayleighSolverApp`` will take care of that for you. ``RayleighSolverApp`` takes a configuration dictionary as its single constructor argument. If you don't provide one, a default configuration dictionary will be used."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# app.config"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "When initialised, the application will use the configuration dictionary to create a corresponding scene dictionary:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# app._scene_dict"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "``RayleighSolverApp`` will take care of that for you. ``RayleighSolverApp`` takes a configuration dictionary as its single constructor argument. If you don't provide one, a default configuration dictionary will be used.\n",
     "Let's try to define our custom configuration dictionary and initialise our application with it.\n",
     "The configuration dictionary must follow carefully a given format. The dictionary accepts five different keys: ``mode``, ``surface``, ``atmosphere``, ``illumination`` and ``measure``. No other keys may be provided. All keys except ``atmosphere`` are required but also comes with a default value. For each key, the value is another dictionary that configures the given element."
    ]
@@ -92,20 +53,23 @@
     "    'atmosphere': {\n",
     "        'type': 'rayleigh_homogeneous',\n",
     "        'height': 100,  # km\n",
-    "        'width': 10000,  # km\n",
-    "        'sigma_s_params': {\n",
-    "            'refractive_index': 1.0003  # dimensionless\n",
-    "        }\n",
     "    },\n",
     "    'measure': {\n",
     "        'type': 'hemispherical',\n",
-    "        'spp': 1000,  # dimensionless\n",
+    "        'spp': 32000,  # dimensionless\n",
     "        'zenith_res': 10.,  # deg\n",
     "        'azimuth_res': 10.  # deg\n",
     "    }\n",
     "}\n",
     "app = RayleighSolverApp(config)\n",
     "#display(app.config)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that we don't have to set the kernel variant anymore; ``RayleighSolverApp`` automatically takes care of that for us."
    ]
   },
   {
@@ -124,12 +88,9 @@
     "import yaml\n",
     "\n",
     "with open(\"config.yml\", 'r') as f:\n",
-    "    try:\n",
-    "        yaml_config = yaml.safe_load(f)\n",
-    "        app = RayleighSolverApp(yaml_config)\n",
-    "        # display(app.config)\n",
-    "    except yaml.YAMLError as exc:\n",
-    "        print(exc)"
+    "    yaml_config = yaml.safe_load(f)\n",
+    "    app = RayleighSolverApp(yaml_config)\n",
+    "    # display(app.config)"
    ]
   },
   {
@@ -184,7 +145,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Additionally, ``RayleighSolverApp`` lets you visualize the results by producing specialised plots with the collected results. Because we set the type of measure to **hemispherical**, when we call its plot method, the application will automatically produce a hemispherical plot:"
+    "Additionally, ``RayleighSolverApp`` lets you visualize the results by producing specialised plots with the collected results. Plotting the results is as simple as calling the `plot` method of our application. Here, we produce a plot in the principal plane by setting the `plot_type` parameter to `pplane`:"
    ]
   },
   {
@@ -193,14 +154,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "app.plot()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We can also plot the results in the principal plane:"
+    "app.plot(plot_type=\"pplane\")"
    ]
   },
   {
@@ -208,16 +162,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "app.plot(plot_type='pplane')"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.7 64-bit ('eradiate': conda)",
+   "display_name": "Python 3.7.6 64-bit ('eradiate': conda)",
    "language": "python",
-   "name": "python_defaultSpec_1593510965331"
+   "name": "python37664biteradiateconda25a6c18de8134cf2a50733d323d5285d"
   },
   "language_info": {
    "codemirror_mode": {
