tuned wavelength to have sigma=0.01

--- a/demo/3-rayleigh_solver_app/rayleigh_solver_app.ipynb
+++ b/demo/3-rayleigh_solver_app/rayleigh_solver_app.ipynb
@@ -38,7 +38,7 @@
     "config = {\n",
     "    'mode': {\n",
     "        'type': 'mono',\n",
-    "        'wavelength': 760.  # nm\n",
+    "        'wavelength': 577.  # nm\n",
     "    },\n",
     "    'illumination': {\n",
     "        'type': 'directional',\n",
@@ -48,11 +48,11 @@
     "    },\n",
     "    'surface': {\n",
     "        'type': 'lambertian',\n",
-    "        'reflectance': 0.35  # dimensionless\n",
+    "        'reflectance': 0.5  # dimensionless\n",
     "    },\n",
     "    'atmosphere': {\n",
     "        'type': 'rayleigh_homogeneous',\n",
-    "        'height': 100,  # km\n",
+    "        'height': 40.,  # km\n",
     "    },\n",
     "    'measure': {\n",
     "        'type': 'hemispherical',\n",
