Updated demo part 2 notebook based on Yves's feedback

--- a/demo/2-scene_construction/scene_construction.ipynb
+++ b/demo/2-scene_construction/scene_construction.ipynb
@@ -149,7 +149,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
@@ -157,7 +159,13 @@
     "\n",
     "data = np.array(sensor.film().bitmap())\n",
     "plt.imshow(np.squeeze(data))\n",
-    "plt.colorbar()\n",
+    "cbar = plt.colorbar()\n",
+    "cbar.set_label(\"Radiance [W/km$^2$/sr/nm]\")\n",
+    "cbar.formatter.set_scientific(True)\n",
+    "cbar.formatter.set_powerlimits((0,0))\n",
+    "cbar.formatter.set_useMathText(True)\n",
+    "plt.xlabel(\"Pixel index\")\n",
+    "plt.ylabel(\"Pixel index\")\n",
     "plt.show()\n",
     "plt.close()"
    ]
@@ -182,7 +190,13 @@
     "    sensor = scene.sensors()[0]\n",
     "    data = np.array(sensor.film().bitmap())\n",
     "    plt.imshow(np.squeeze(data))\n",
-    "    plt.colorbar()\n",
+    "    cbar = plt.colorbar()\n",
+    "    cbar.set_label(\"Radiance [W/km$^2$/sr/nm]\")\n",
+    "    cbar.formatter.set_scientific(True)\n",
+    "    cbar.formatter.set_powerlimits((0,0))\n",
+    "    cbar.formatter.set_useMathText(True)\n",
+    "    plt.xlabel(\"Pixel index\")\n",
+    "    plt.ylabel(\"Pixel index\")\n",
     "    plt.show()\n",
     "    plt.close()"
    ]
@@ -325,7 +339,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Kernel scene dictionaries are a very flexible way of interacting with the model. They are very easy to modify. For instance, let's add a few objects to the scene (floating spheres), increase the image resolution and decrease the number of samples:"
+    "Kernel scene dictionaries are a very flexible way of interacting with the model. They are very easy to modify. For instance, let's add a few objects to the scene. Let's start with a single floating sphere, increase the image resolution and decrease the number of samples:"
    ]
   },
   {
@@ -336,6 +350,46 @@
    "source": [
     "scene_dict[\"measure\"][\"sampler\"][\"sample_count\"] = 512\n",
     "scene_dict[\"measure\"][\"film\"][\"height\"] = scene_dict[\"measure\"][\"film\"][\"width\"] = 256\n",
+    "\n",
+    "\n",
+    "scene_dict[f\"floating_sphere\"] = {\n",
+    "    \"type\": \"sphere\", \n",
+    "    \"radius\": 25,\n",
+    "    \"center\": [0, 0, 100],\n",
+    "    \"bsdf\": {\n",
+    "        \"type\": \"diffuse\",\n",
+    "        \"reflectance\": {\n",
+    "            \"type\": \"uniform\",\n",
+    "            \"value\": 0.5\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "scene = load_dict(scene_dict)\n",
+    "render(scene)\n",
+    "plt.figure(figsize=(8,6))\n",
+    "plot(scene)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We see here a few interesting things: \n",
+    "\n",
+    "1. The sphere's projected shadow emphasises the directionality of the illumination.\n",
+    "2. The sphere's projected shadow has radiance values much higher than the 0 we'd get without the participating medium's multiple scattering.\n",
+    "3. The shadow \"trail\" visible in the participating shows that less light is arriving in this region and is scattered towards the sensor.\n",
+    "\n",
+    "Now, we can play around. Let's remove this sphere and add a few more with different reflectance values for fun using a few Python statements:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scene_dict.pop(\"floating_sphere\", None)\n",
     "\n",
     "n_spheres = 24\n",
     "angles = np.linspace(0, 2. * np.pi, n_spheres, endpoint=False)\n",
@@ -440,8 +494,7 @@
    },
    "outputs": [],
    "source": [
-    "d = surface.kernel_dict()\n",
-    "display(d)"
+    "surface.kernel_dict()"
    ]
   },
   {
@@ -851,7 +904,12 @@
     "fig, ax = plt.subplots(subplot_kw=dict(projection='polar'))\n",
     "pcm = ax.pcolormesh(theta, r, values, cmap=\"BuPu_r\")\n",
     " \n",
-    "plt.colorbar(pcm)\n",
+    "cbar = plt.colorbar(pcm)\n",
+    "cbar.set_label(\"Radiance [W/km$^2$/sr/nm]\")\n",
+    "cbar.formatter.set_scientific(True)\n",
+    "cbar.formatter.set_powerlimits((0,0))\n",
+    "cbar.formatter.set_useMathText(True)\n",
+    "\n",
     "plt.show()\n",
     "plt.close()"
    ]
