Demo notebooks: Added missing units

--- a/demo/3-rayleigh_solver_app/rayleigh_solver_app.ipynb
+++ b/demo/3-rayleigh_solver_app/rayleigh_solver_app.ipynb
@@ -154,7 +154,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "app.plot(plot_type=\"pplane\")"
+    "app.plot(plot_type=\"hemispherical\")\n",
+    "\n",
+    "# Hacky but only way to tune color bar without modifying the code\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "plt.gcf().axes[1].set_ylabel(\"Radiance [W/km$^2$/sr/nm]\")\n",
+    "plt.show()\n",
+    "plt.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "app.plot(plot_type=\"pplane\")\n",
+    "\n",
+    "# Hacky but only way to tune axes without modifying the code\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "plt.gca().set_xlabel(\"Viewing zenith angle\")\n",
+    "plt.gca().set_ylabel(\"Radiance [W/km$^2$/sr/nm]\")\n",
+    "plt.show()\n",
+    "plt.close()"
    ]
   },
   {
@@ -167,9 +191,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.6 64-bit ('eradiate': conda)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python37664biteradiateconda25a6c18de8134cf2a50733d323d5285d"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
