updated demo notebook for part 3

--- a/demo/3-rayleigh_solver_app/rayleigh_solver_app.ipynb
+++ b/demo/3-rayleigh_solver_app/rayleigh_solver_app.ipynb
@@ -8,6 +8,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We start by importing RayleighSolverApp:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -20,9 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "``RayleighSolverApp`` will take care of that for you. ``RayleighSolverApp`` takes a configuration dictionary as its single constructor argument. If you don't provide one, a default configuration dictionary will be used.\n",
-    "Let's try to define our custom configuration dictionary and initialise our application with it.\n",
-    "The configuration dictionary must follow carefully a given format. The dictionary accepts five different keys: ``mode``, ``surface``, ``atmosphere``, ``illumination`` and ``measure``. No other keys may be provided. All keys except ``atmosphere`` are required but also comes with a default value. For each key, the value is another dictionary that configures the given element."
+    "To configure ``RayleighSolverApp``, we must give him a dictionary. Below, we create a configuration dictionary and we use it to instantiate our ``RayleighSolverApp``."
    ]
   },
   {
@@ -33,8 +38,6 @@
    },
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "\n",
     "config = {\n",
     "    'mode': {\n",
     "        'type': 'mono',\n",
@@ -76,7 +79,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Show how to do this from a YAML file"
+    "## Configure using a YAML file"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A YAML file may be used to create this dictionary. The YAML file is easily parsed into a python dictionary."
    ]
   },
   {
