Minor updates to demo part 2

--- a/demo/2-scene_construction/scene_construction.ipynb
+++ b/demo/2-scene_construction/scene_construction.ipynb
@@ -352,7 +352,7 @@
     "scene_dict[\"measure\"][\"film\"][\"height\"] = scene_dict[\"measure\"][\"film\"][\"width\"] = 256\n",
     "\n",
     "\n",
-    "scene_dict[f\"floating_sphere\"] = {\n",
+    "scene_dict[\"floating_sphere\"] = {\n",
     "    \"type\": \"sphere\", \n",
     "    \"radius\": 25,\n",
     "    \"center\": [0, 0, 100],\n",
@@ -495,25 +495,6 @@
    "outputs": [],
    "source": [
     "surface.kernel_dict()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Each item of the dictionary can be instantiated separately:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "from eradiate.kernel.core.xml import load_dict\n",
-    "print(load_dict(surface.kernel_dict()[\"bsdf_surface\"]))"
    ]
   },
   {
@@ -842,7 +823,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that this scene definition does _not_ include any sensor: the solver will take care of instantiating them and positioning them appropriately based on the angular configuration requested by the user.\n",
+    "Note that this scene definition does _not_ include any sensor: the runner will take care of positioning and instantiating them appropriately based on the angular configuration requested by the user.\n",
     "\n",
     "We start the simulation with the `run` method. We can first run the simulation for a single angular configuration:"
    ]
